--- a/heatmap-web.html
+++ b/heatmap-web.html
@@ -6,12 +6,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
 <link rel="stylesheet" href="heatmap.css"/>
 </head>
+<script type="text/javascript">
+$(document).ready(function() {
+ var one = document.getElementById("one");
+ var two = document.getElementById("two");
+ style = window.getComputedStyle(one);
+ wdt = style.getPropertyValue(‘width’);
+ two.style.width = wdt;
+});
+</script>
 <body>
 <h2>Heatmap</h2>
 <script src="sketch.js"></script>
 <script src="heatmap.js"></script>
-<div class="heatmap" style="position: relative;">
-<img class="heatmap-canvas" width="834" height="400" style="position: absolute; left: 0px; top: 0px;" src="screencapture.png">
+<div id="one" class="heatmap" style="position: relative;">
+<img id="two" class="heatmap-canvas" id="heatmap-canvas" style="position: absolute; left: 0px; top: 0px" src="PUT YOUR SCREEN CAPTURE IMAGE NAME HERE">
 </div>
 </body>
 </html>
