change quote marks on line 14
credits to Shaun :P

--- a/heatmap-web.html
+++ b/heatmap-web.html
@@ -11,7 +11,7 @@ $(document).ready(function() {
  var one = document.getElementById("one");
  var two = document.getElementById("two");
  style = window.getComputedStyle(one);
- wdt = style.getPropertyValue(‘width’);
+ wdt = style.getPropertyValue("width");
  two.style.width = wdt;
 });
 </script>
